s3 code and postman collection updated